[gd_scene load_steps=18 format=3 uid="uid://bv0yw63hpv41w"]

[ext_resource type="Script" path="res://dimensionswitch.gd" id="1_cnb88"]
[ext_resource type="Resource" uid="uid://bmx3640l3is5r" path="res://dialogue/hint.dialogue" id="2_2f5wb"]
[ext_resource type="PackedScene" uid="uid://bouhhb1mwyila" path="res://Obstacles/Old/old_wall_b.tscn" id="2_7i5l2"]
[ext_resource type="PackedScene" uid="uid://bhv8y7ecn4w7w" path="res://player.tscn" id="2_e34xh"]
[ext_resource type="PackedScene" uid="uid://du46w8vyayjbi" path="res://Obstacles/New/new_wall_s_t.tscn" id="2_fwaiw"]
[ext_resource type="PackedScene" uid="uid://cnpgllcl4bpy4" path="res://pickup.tscn" id="3_56o4v"]
[ext_resource type="PackedScene" uid="uid://dkkgolq3hw7nj" path="res://Obstacles/Blocks/new_block_3.tscn" id="3_n4yv0"]
[ext_resource type="PackedScene" uid="uid://bf7jr64gsg22g" path="res://Obstacles/Old/old_wall_s.tscn" id="3_prpj2"]
[ext_resource type="PackedScene" uid="uid://b30eec5oxs4qc" path="res://Obstacles/Old/crumble_wall.tscn" id="4_7r218"]
[ext_resource type="PackedScene" uid="uid://kccta41y87tg" path="res://Obstacles/persisted/persisted_wall_s.tscn" id="4_bosf6"]
[ext_resource type="PackedScene" uid="uid://b27cp3ok1b7ie" path="res://Obstacles/New/new_wall_b.tscn" id="6_andhh"]
[ext_resource type="PackedScene" uid="uid://mmqtx236ii6j" path="res://level_1.tscn" id="6_od16k"]
[ext_resource type="PackedScene" uid="uid://capbu8i8lxa0m" path="res://Obstacles/New/new_wall_m.tscn" id="8_qm2p6"]
[ext_resource type="PackedScene" uid="uid://dwipdeufmwcsq" path="res://dialogue/dialogue_trigger.tscn" id="11_wj1kr"]
[ext_resource type="Resource" uid="uid://s5ntat5auknh" path="res://dialogue/main.dialogue" id="12_1tenc"]
[ext_resource type="Resource" uid="uid://bf6ikwdc2ewv8" path="res://dialogue/future.dialogue" id="12_1vgtd"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8enc2"]
radius = 2.0

[node name="World" type="Node3D"]
script = ExtResource("1_cnb88")
hintDialogue = ExtResource("2_2f5wb")

[node name="OldDimension" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -16)

[node name="OldWall_b" parent="OldDimension" instance=ExtResource("2_7i5l2")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.02237, -0.999272, 39.9833)

[node name="OldWall_s" parent="OldDimension" instance=ExtResource("3_prpj2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1, 40)

[node name="CrumbleWall" parent="OldDimension" instance=ExtResource("4_7r218")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.97799, -1, 34.0289)

[node name="NewDimension" type="Node3D" parent="."]

[node name="NewBlock3" parent="NewDimension" instance=ExtResource("3_n4yv0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.96262, 0.0296633, 3.9477)

[node name="NewBlock5" parent="NewDimension" instance=ExtResource("3_n4yv0")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 12.9626, 1.02966, -0.0523)

[node name="NewBlock4" parent="NewDimension" instance=ExtResource("3_n4yv0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.96262, -0.470337, 5.99445)

[node name="NewBlock6" parent="NewDimension" instance=ExtResource("3_n4yv0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0628271, 0.288133, 26.0259)

[node name="NewBlock7" parent="NewDimension" instance=ExtResource("3_n4yv0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0628271, 2.28813, 26.0259)

[node name="NewBlock8" parent="NewDimension" instance=ExtResource("3_n4yv0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0628271, 0.288133, 28.0259)

[node name="NewBlock9" parent="NewDimension" instance=ExtResource("3_n4yv0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0628271, 0.288133, 30.0259)

[node name="NewBlock10" parent="NewDimension" instance=ExtResource("3_n4yv0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0628271, 0.288133, 32.0259)

[node name="NewWall_s_t" parent="NewDimension" instance=ExtResource("2_fwaiw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.0248, -0.128081, 26)

[node name="NewWall_b" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.77964, 0, 18)

[node name="NewWall_b2" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.03033, 0, 18)

[node name="NewWall_b7" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.77964, 0, 12.0152)

[node name="NewWall_b8" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.03033, 0, 12.0152)

[node name="NewWall_b9" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.03033, 2, 12.0152)

[node name="NewWall_b13" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.03033, 2, 18.0152)

[node name="NewWall_b14" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.03033, 4, 12.0152)

[node name="NewWall_b15" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.03033, 4, 12.0152)

[node name="NewWall_b16" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.03033, 4, 18.0152)

[node name="NewWall_b3" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.03033, 0, 24)

[node name="NewWall_b4" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.03033, 0, 30)

[node name="NewWall_b5" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.75734, 0, 24)

[node name="NewWall_b6" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.75734, 0, 30)

[node name="NewWall_b12" parent="NewDimension" instance=ExtResource("6_andhh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.97799, 0, 18.0289)

[node name="NewWall_m" parent="NewDimension" instance=ExtResource("8_qm2p6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.35805, 2.00588, 0.166566)

[node name="NewWall_m2" parent="NewDimension" instance=ExtResource("8_qm2p6")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.35805, 2.00588, 0.166566)

[node name="PersistedObjects" type="Node3D" parent="."]

[node name="PersistedWall_s" parent="PersistedObjects" instance=ExtResource("4_bosf6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.35805, 0.00588262, 0.166566)

[node name="PersistedWall_s2" parent="PersistedObjects" instance=ExtResource("4_bosf6")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.35805, 0.00588262, 0.166566)

[node name="Level1" parent="PersistedObjects" instance=ExtResource("6_od16k")]

[node name="Player" parent="." instance=ExtResource("2_e34xh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.1066, 1.67481, 32.6627)

[node name="Pickups" type="Node3D" parent="."]

[node name="Pickup" parent="Pickups" instance=ExtResource("3_56o4v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.6481, 2.61421, 15.9692)

[node name="Pickup2" parent="Pickups" instance=ExtResource("3_56o4v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.9295, 3.17113, 4.5951)

[node name="Pickup3" parent="Pickups" instance=ExtResource("3_56o4v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.19311, 1.81966, 26.7595)
metadata/_edit_group_ = true

[node name="DialogueTrigger2" parent="Pickups/Pickup3" instance=ExtResource("11_wj1kr")]
Dialogue = ExtResource("12_1vgtd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.117572, 0.993064, 0, -0.993064, -0.117572, 0, 31.2664, 13.0736)

[node name="DialogueTrigger" parent="." instance=ExtResource("11_wj1kr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1, 29.5)
Dialogue = ExtResource("12_1tenc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DialogueTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
shape = SubResource("SphereShape3D_8enc2")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
